--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Novo titulo</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Novo titulo</title>
 </head>
+
 <body>
-    teste
+
+  <header>
+    <div>
+
+    </div>
+
+  </header>
+
+
+  <article>
+    <section>
+      <div></div>
+
+    </section>
+    <section></section>
+  </article>
+
+
+  <article>
+    <section>
+      <div></div>
+    </section>
+    <section>
+
+      <div>
+
+        <section>
+          <aside>
+            <div></div>
+
+          </aside>
+          <aside>
+            <div></div>
+
+          </aside>
+        </section>
+
+        <section>
+          <aside>
+            <div></div>
+
+          </aside>
+          <aside>
+            <div></div>
+
+          </aside>
+        </section>
+
+      </div>
+    </section>
+  </article>
+
+  <article>
+    <section>
+      <div></div>
+
+      <form></form>
+    </section>
+    <section></section>
+  </article>
+
+  <footer>
+    <section></section>
+    <section></section>
+  </footer>
+
 </body>
+
 </html>
