insercao dos textos

--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
 <body>
 
   <header>
-    <div>
-
-    </div>
-
+    <div></div>
+    <span>Me ligue (+55) 9999-9999</span>
+    <span>cassiano@scheidemantel.com.br</span>
+    <span>Ver Linkedin</span>
+    <span>Vamos conversar</span>
   </header>
 
 
   <article>
     <section>
-      <div></div>
-
+      <div>
+        <span>Sobre eu</span>
+      </div>
+      <h1>Olá,</h1>
+      <h1>me chamo</h1>
+      <h1>Cassiano</h1>
+      <h3>Programador frontend</h3>
+      <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
     </section>
     <section></section>
   </article>
@@ -29,31 +36,34 @@
 
   <article>
     <section>
-      <div></div>
+      <div>
+        <span>Serviços</span>
+      </div>
     </section>
     <section>
-
+      <h2>Meus clientes sabem que eu sempre entregarei um serviço com a qualidade máxima |</h2>
+      <p>Cada projeto para mim é único, dando o meu máximo para entregar tudo aquilo que foi combinado. Com o foco
+        pensado em cada projeto, assim prestando um serviço que será lembrado para sempre!</p>
       <div>
-
         <section>
           <aside>
             <div></div>
-
+            <h4>Aplicações Mobile</h4>
           </aside>
           <aside>
             <div></div>
-
+            <h4>Websites</h4>
           </aside>
         </section>
 
         <section>
           <aside>
             <div></div>
-
+            <h4>Programação de protótipos</h4>
           </aside>
           <aside>
             <div></div>
-
+            <h4>Performance</h4>
           </aside>
         </section>
 
@@ -63,8 +73,10 @@
 
   <article>
     <section>
-      <div></div>
-
+      <div>
+        <span>Entre em contato comigo</span>
+      </div>
+      <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
       <form></form>
     </section>
     <section></section>
@@ -72,7 +84,12 @@
 
   <footer>
     <section></section>
-    <section></section>
+    <section>
+      <h2>Mantenha contato</h2>
+      <p>Brasil</p>
+      <h3>cassiano@scheidemantel.com.br</h3>
+      <p>(+55) 9999-9999</p>
+    </section>
   </footer>
 
 </body>
