adicionado links na pagina

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
   <header>
-    <div></div>
-    <span>Me ligue (+55) 9999-9999</span>
-    <span>cassiano@scheidemantel.com.br</span>
-    <span>Ver Linkedin</span>
-    <span>Vamos conversar</span>
+    <a></a>
+    <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
+    <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+    <a href="https://www.linkedin.com/in/cassianos/" target="_blank">Ver Linkedin</a>
+    <a href="#form">Vamos conversar</a>
   </header>
 
 
@@ -29,6 +29,7 @@
       <h1>Cassiano</h1>
       <h3>Programador frontend</h3>
       <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
+      <a href="#form">Me contrate</a>
     </section>
     <section></section>
   </article>
@@ -77,7 +78,7 @@
         <span>Entre em contato comigo</span>
       </div>
       <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
-      <form></form>
+      <form id="form"></form>
     </section>
     <section></section>
   </article>
@@ -87,8 +88,8 @@
     <section>
       <h2>Mantenha contato</h2>
       <p>Brasil</p>
-      <h3>cassiano@scheidemantel.com.br</h3>
-      <p>(+55) 9999-9999</p>
+      <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+      <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
     </section>
   </footer>
 
