ajuste nome das imagens e adicao de imagens no html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
   <header>
-    <a></a>
+    <a>
+      <img src="./imagens/imagens-background/ic-logo.png" />
+    </a>
     <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
     <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
     <a href="https://www.linkedin.com/in/cassianos/" target="_blank">Ver Linkedin</a>
@@ -31,7 +33,9 @@
       <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
       <a href="#form">Me contrate</a>
     </section>
-    <section></section>
+    <section>
+      <img src="./imagens/imagens-background/ic-sobre-eu.svg" />
+    </section>
   </article>
 
 
@@ -40,6 +44,7 @@
       <div>
         <span>Serviços</span>
       </div>
+      <img src="./imagens/imagens-background/ic-servicos.svg" />
     </section>
     <section>
       <h2>Meus clientes sabem que eu sempre entregarei um serviço com a qualidade máxima |</h2>
@@ -48,23 +53,35 @@
       <div>
         <section>
           <aside>
-            <div></div>
+            <div>
+              <img src="./imagens/icones/ic-aplicacoes-mobile.svg" />
+            </div>
             <h4>Aplicações Mobile</h4>
+            <img src="./imagens/icones/ic-flexa-direita.svg" />
           </aside>
           <aside>
-            <div></div>
+            <div>
+              <img src="./imagens/icones/ic-websites.svg" />
+            </div>
             <h4>Websites</h4>
+            <img src="./imagens/icones/ic-flexa-direita.svg" />
           </aside>
         </section>
 
         <section>
           <aside>
-            <div></div>
+            <div>
+              <img src="./imagens/icones/ic-programacao-prototipos.svg" />
+            </div>
             <h4>Programação de protótipos</h4>
+            <img src="./imagens/icones/ic-flexa-direita.svg" />
           </aside>
           <aside>
-            <div></div>
+            <div>
+              <img src="./imagens/icones/ic-performance.svg" />
+            </div>
             <h4>Performance</h4>
+            <img src="./imagens/icones/ic-flexa-direita.svg" />
           </aside>
         </section>
 
@@ -80,11 +97,15 @@
       <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
       <form id="form"></form>
     </section>
-    <section></section>
+    <section>
+      <img src="./imagens/imagens-background/ic-contato.svg" />
+    </section>
   </article>
 
   <footer>
-    <section></section>
+    <section>
+      <img src="./imagens/imagens-background/ic-footer.svg" />
+    </section>
     <section>
       <h2>Mantenha contato</h2>
       <p>Brasil</p>
