--- a/index.html
+++ b/index.html
@@ -7,6 +7,170 @@
     <title>Novo titulo</title>
 </head>
 <body>
-    teste
+  <!--
+  <header>
+    <a>
+      <img src="./imagens/imagens-background/ic-logo.png" />
+    </a>
+    <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
+    <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+    <a href="https://www.linkedin.com/in/cassianos/" target="_blank">Ver Linkedin</a>
+    <a href="#form">Vamos conversar</a>
+  </header>
+
+
+  <article>
+    <section>
+      <div>
+        <span>Sobre eu</span>
+      </div>
+      <h1>Olá,</h1>
+      <h1>me chamo</h1>
+      <h1>Cassiano</h1>
+      <h3>Programador frontend</h3>
+      <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
+      <a href="#form">Me contrate</a>
+    </section>
+    <section>
+      <img src="./imagens/imagens-background/ic-sobre-eu.svg" />
+    </section>
+  </article>
+
+
+  <article>
+    <section>
+      <div>
+        <span>Serviços</span>
+      </div>
+      <img src="./imagens/imagens-background/ic-servicos.svg" />
+    </section>
+    <section>
+      <h2>Meus clientes sabem que eu sempre entregarei um serviço com a qualidade máxima |</h2>
+      <p>Cada projeto para mim é único, dando o meu máximo para entregar tudo aquilo que foi combinado. Com o foco
+        pensado em cada projeto, assim prestando um serviço que será lembrado para sempre!</p>
+      <div>
+        <section>
+          <aside>
+            <div>
+              <img src="./imagens/icones/ic-aplicacoes-mobile.svg" />
+            </div>
+            <h4>Aplicações Mobile</h4>
+            <img src="./imagens/icones/ic-flexa-direita.svg" />
+          </aside>
+          <aside>
+            <div>
+              <img src="./imagens/icones/ic-websites.svg" />
+            </div>
+            <h4>Websites</h4>
+            <img src="./imagens/icones/ic-flexa-direita.svg" />
+          </aside>
+        </section>
+
+        <section>
+          <aside>
+            <div>
+              <img src="./imagens/icones/ic-programacao-prototipos.svg" />
+            </div>
+            <h4>Programação de protótipos</h4>
+            <img src="./imagens/icones/ic-flexa-direita.svg" />
+          </aside>
+          <aside>
+            <div>
+              <img src="./imagens/icones/ic-performance.svg" />
+            </div>
+            <h4>Performance</h4>
+            <img src="./imagens/icones/ic-flexa-direita.svg" />
+          </aside>
+        </section>
+
+      </div>
+    </section>
+  </article>
+
+  <article>
+    <section>
+      <div>
+        <span>Entre em contato comigo</span>
+      </div>
+      <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
+      <form id="form"></form>
+    </section>
+    <section>
+      <img src="./imagens/imagens-background/ic-contato.svg" />
+    </section>
+  </article>
+
+  <footer>
+    <section>
+      <img src="./imagens/imagens-background/ic-footer.svg" />
+    </section>
+    <section>
+      <h2>Mantenha contato</h2>
+      <p>Brasil</p>
+      <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+      <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
+    </section>
+  </footer>
+-->
+
+  <!-- <ol>
+    <li>Um</li>
+    <li>Dois</li>
+    <li>Três</li>
+    <li>Quatro</li>
+    <li>Cinco</li>
+  </ol>
+  <br />
+  <br />
+  <br />
+  <br />
+  <ul>
+    <li>Um</li>
+    <li>Dois</li>
+    <li>Três</li>
+    <li>Quatro</li>
+    <li>Cinco</li>
+  </ul> -->
+
+  <table>
+    <thead>
+      <tr>
+        <th>Nome</th>
+        <th>Sobrenome</th>
+        <th>Idade</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>João</td>
+        <td>Silva</td>
+        <td>20</td>
+      </tr>
+      <tr>
+        <td>Maria</td>
+        <td>Souza</td>
+        <td>25</td>
+      </tr>
+      <tr>
+        <td>Pedro</td>
+        <td>Oliveira</td>
+        <td>30</td>
+      </tr>
+    </tbody>
+
+    <tfooter>
+      <tr>
+        <td>Total</td>
+        <td></td>
+        <td>100</td>
+      </tr>
+    </tfooter>
+
+  </table>
+
+
+  😡
+
 </body>
 </html>
