--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <!--
-  <header>
+
+  <!-- <header>
     <a>
       <img src="./imagens/imagens-background/ic-logo.png" />
     </a>
@@ -87,7 +87,7 @@
 
       </div>
     </section>
-  </article>
+  </article> -->
 
   <article>
     <section>
@@ -95,14 +95,44 @@
         <span>Entre em contato comigo</span>
       </div>
       <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
-      <form id="form"></form>
+      <form id="form" method="post">
+        <!-- <div>
+          <label for="nome">Nome</label>
+          <input type="text" name="nome" id="nome">
+        </div>
+
+        <div>
+          <label for="email">Email</label>
+          <input type="text" name="email" id="email">
+        </div>
+
+        <div>
+          <label for="assunto">Assunto</label>
+          <input type="text" name="assunto" id="assunto">
+        </div>
+
+        <div>
+          <label for="mensagem">Mensagem</label>
+          <textarea name="" id="mensagem" cols="30" rows="10"></textarea>
+        </div>
+        <button type="submit">Salvar</button> -->
+
+        <input type="checkbox" name="" id="">
+        <input type="color" name="" id="">
+        <input type="date" name="" id="">
+        <input type="datetime" name="" id="">
+        <input type="datetime-local" name="" id="">
+        <input type="number" name="" id="">
+        <input type="search" name="" id="">
+        <input type="password" name="" id="">
+      </form>
     </section>
     <section>
       <img src="./imagens/imagens-background/ic-contato.svg" />
     </section>
   </article>
 
-  <footer>
+  <!-- <footer>
     <section>
       <img src="./imagens/imagens-background/ic-footer.svg" />
     </section>
@@ -112,67 +142,9 @@
       <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
       <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
     </section>
-  </footer>
--->
-
-  <!-- <ol>
-    <li>Um</li>
-    <li>Dois</li>
-    <li>Três</li>
-    <li>Quatro</li>
-    <li>Cinco</li>
-  </ol>
-  <br />
-  <br />
-  <br />
-  <br />
-  <ul>
-    <li>Um</li>
-    <li>Dois</li>
-    <li>Três</li>
-    <li>Quatro</li>
-    <li>Cinco</li>
-  </ul> -->
-
-  <table>
-    <thead>
-      <tr>
-        <th>Nome</th>
-        <th>Sobrenome</th>
-        <th>Idade</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>João</td>
-        <td>Silva</td>
-        <td>20</td>
-      </tr>
-      <tr>
-        <td>Maria</td>
-        <td>Souza</td>
-        <td>25</td>
-      </tr>
-      <tr>
-        <td>Pedro</td>
-        <td>Oliveira</td>
-        <td>30</td>
-      </tr>
-    </tbody>
-
-    <tfooter>
-      <tr>
-        <td>Total</td>
-        <td></td>
-        <td>100</td>
-      </tr>
-    </tfooter>
-
-  </table>
+  </footer> -->
 
 
-  😡
 
 </body>
 
