adicao de estilos na pagina

--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Novo titulo</title>
+  <link rel="stylesheet" href="./estilos.css">
+
 </head>
 
 <body>
 
-  <!-- <header>
+  <header>
     <a>
       <img src="./imagens/imagens-background/ic-logo.png" />
     </a>
-    <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
-    <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+    <a id="telefone" class="telefone" href="tel:5599999999">Me ligue (+55) 9999-9999</a>
+    <a class="telefone" href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
     <a href="https://www.linkedin.com/in/cassianos/" target="_blank">Ver Linkedin</a>
     <a href="#form">Vamos conversar</a>
+    <span>Um</span>
+    <span>Dois</span>
   </header>
+  <span>Três</span>
 
-
-  <article>
+  <!-- <article>
     <section>
       <div>
         <span>Sobre eu</span>
@@ -36,10 +40,10 @@
     <section>
       <img src="./imagens/imagens-background/ic-sobre-eu.svg" />
     </section>
-  </article>
+  </article> -->
 
 
-  <article>
+  <!-- <article>
     <section>
       <div>
         <span>Serviços</span>
@@ -89,14 +93,14 @@
     </section>
   </article> -->
 
-  <article>
+  <!-- <article>
     <section>
       <div>
         <span>Entre em contato comigo</span>
       </div>
       <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
       <form id="form" method="post">
-        <!-- <div>
+        <div>
           <label for="nome">Nome</label>
           <input type="text" name="nome" id="nome">
         </div>
@@ -115,23 +119,14 @@
           <label for="mensagem">Mensagem</label>
           <textarea name="" id="mensagem" cols="30" rows="10"></textarea>
         </div>
-        <button type="submit">Salvar</button> -->
-
-        <input type="checkbox" name="" id="">
-        <input type="color" name="" id="">
-        <input type="date" name="" id="">
-        <input type="datetime" name="" id="">
-        <input type="datetime-local" name="" id="">
-        <input type="number" name="" id="">
-        <input type="search" name="" id="">
-        <input type="password" name="" id="">
+        <button type="submit">Salvar</button>
 
       </form>
     </section>
     <section>
       <img src="./imagens/imagens-background/ic-contato.svg" />
     </section>
-  </article>
+  </article> -->
 
   <!-- <footer>
     <section>
