explicacao de elemento blocantes e inline

--- a/index.html
+++ b/index.html
@@ -11,9 +11,34 @@
 
 </head>
 
-<body>
+<!--
+  <Elementos blocantes>
+    <p> - Parágrafo
+    <h1>~<h6> - Títulos
+    <div> - Divisões
+    <ul><ol><li> - Parágrafo
+    <form> - Parágrafo
+  </Elementos blocantes>
 
-  <header>
+  <Elementos inline>
+    <span> - Spans
+    <img> - Imagens
+    <a> - Links(ancoras)
+  </Elementos blocantes>
+-->
+
+<body>
+  <h1>Cassiano</h1>
+  <h3>
+    <u>Pro</u>gramador frontend
+  </h3>
+  <img src="./imagens/imagens-background/ic-logo.png" />
+  <img src="./imagens/imagens-background/ic-logo.png" />
+  <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
+  <img src="./imagens/imagens-background/ic-logo.png" />
+  <span>Cassiano</span>
+  <span>Scheidemantel</span>
+  <!-- <header>
     <a>
       <img src="./imagens/imagens-background/ic-logo.png" />
     </a>
@@ -24,7 +49,7 @@
     <span>Um</span>
     <span>Dois</span>
   </header>
-  <span>Três</span>
+  <span>Três</span> -->
 
   <!-- <article>
     <section>
