adicao de tamanho de fontes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 </head>
 
 <body>
-  <h1>Cassiano</h1>
+  <div class="tamanho">
+    <span>Cassiano</span>
+    <!-- <span>Cassiano</span>
+    <span>Cassiano</span>
+    <span>Cassiano</span>
+    <span>Cassiano</span>
+    <span>Cassiano</span>
+    <span>Cassiano</span>
+    <span>Cassiano</span>
+    <span>Cassiano</span>
+    <span>Cassiano</span> -->
+  </div>
+  <!-- <h1>Cassiano</h1>
   <h3>
     <u>Pro</u>gramador frontend
   </h3>
@@ -21,7 +33,7 @@
   <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
   <img src="./imagens/imagens-background/ic-logo.png" />
   <span>Cassiano</span>
-  <span>Scheidemantel</span>
+  <span>Scheidemantel</span> -->
   <!-- <header>
     <a>
       <img src="./imagens/imagens-background/ic-logo.png" />
