--- a/index.html
+++ b/index.html
@@ -1,169 +1,145 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portifólio do Cassiano</title>
-  <link rel="stylesheet" href="./estilos.css">
+  <link rel="stylesheet" href="./styles/styles.css">
   <link rel="icon" href="./favicon.ico">
 
 </head>
 
 <body>
-  <div class="tamanho">
-    <span>Cassiano</span>
-    <!-- <span>Cassiano</span>
-    <span>Cassiano</span>
-    <span>Cassiano</span>
-    <span>Cassiano</span>
-    <span>Cassiano</span>
-    <span>Cassiano</span>
-    <span>Cassiano</span>
-    <span>Cassiano</span>
-    <span>Cassiano</span> -->
+  <div class="container">
+    <header>
+      <div class="logo">
+        <img src="./images/images-background/ic-logo.png" />
+      </div>
+      <a id="telefone" class="telefone" href="tel:5599999999">Me ligue (+55) 9999-9999</a>
+      <a class="telefone" href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+      <a href="https://www.linkedin.com/in/cassianos/" target="_blank">Ver Linkedin</a>
+      <a href="#form">Vamos conversar</a>
+    </header>
+
+    <article class="banner">
+      <section class="left">
+        <div>
+          <span>Sobre eu</span>
+        </div>
+        <h1>Olá,</h1>
+        <h1>me chamo</h1>
+        <h1>Cassiano</h1>
+        <h3>Programador frontend</h3>
+        <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
+        <a href="#form">Me contrate</a>
+      </section>
+      <section class="right">
+        <img src="./images/images-background/ic-sobre-eu.svg" />
+      </section>
+    </article>
+
+
+    <article>
+      <section>
+        <div>
+          <span>Serviços</span>
+        </div>
+        <img src="./images/images-background/ic-servicos.svg" />
+      </section>
+      <section>
+        <h2>Meus clientes sabem que eu sempre entregarei um serviço com a qualidade máxima |</h2>
+        <p>Cada projeto para mim é único, dando o meu máximo para entregar tudo aquilo que foi combinado. Com o foco
+          pensado em cada projeto, assim prestando um serviço que será lembrado para sempre!</p>
+        <div>
+          <section>
+            <aside>
+              <div>
+                <img src="./images/icons/ic-aplicacoes-mobile.svg" />
+              </div>
+              <h4>Aplicações Mobile</h4>
+              <img src="./images/icons/ic-flexa-direita.svg" />
+            </aside>
+            <aside>
+              <div>
+                <img src="./images/icons/ic-websites.svg" />
+              </div>
+              <h4>Websites</h4>
+              <img src="./images/icons/ic-flexa-direita.svg" />
+            </aside>
+          </section>
+
+          <section>
+            <aside>
+              <div>
+                <img src="./images/icons/ic-programacao-prototipos.svg" />
+              </div>
+              <h4>Programação de protótipos</h4>
+              <img src="./images/icons/ic-flexa-direita.svg" />
+            </aside>
+            <aside>
+              <div>
+                <img src="./images/icons/ic-performance.svg" />
+              </div>
+              <h4>Performance</h4>
+              <img src="./images/icons/ic-flexa-direita.svg" />
+            </aside>
+          </section>
+
+        </div>
+      </section>
+    </article>
+
+    <article>
+      <section>
+        <div>
+          <span>Entre em contato comigo</span>
+        </div>
+        <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
+        <form id="form" method="post">
+          <div>
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="nome">
+          </div>
+
+          <div>
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email">
+          </div>
+
+          <div>
+            <label for="assunto">Assunto</label>
+            <input type="text" name="assunto" id="assunto">
+          </div>
+
+          <div>
+            <label for="mensagem">Mensagem</label>
+            <textarea name="" id="mensagem" cols="30" rows="10"></textarea>
+          </div>
+          <button type="submit">Salvar</button>
+
+        </form>
+      </section>
+      <section>
+        <img src="./images/images-background/ic-contato.svg" />
+      </section>
+    </article>
+
+    <footer>
+      <section>
+        <img src="./images/images-background/ic-footer.svg" />
+      </section>
+      <section>
+        <h2>Mantenha contato</h2>
+        <p>Brasil</p>
+        <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+        <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
+      </section>
+    </footer>
+
+
   </div>
-  <!-- <h1>Cassiano</h1>
-  <h3>
-    <u>Pro</u>gramador frontend
-  </h3>
-  <img src="./imagens/imagens-background/ic-logo.png" />
-  <img src="./imagens/imagens-background/ic-logo.png" />
-  <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
-  <img src="./imagens/imagens-background/ic-logo.png" />
-  <span>Cassiano</span>
-  <span>Scheidemantel</span> -->
-  <!-- <header>
-    <a>
-      <img src="./imagens/imagens-background/ic-logo.png" />
-    </a>
-    <a id="telefone" class="telefone" href="tel:5599999999">Me ligue (+55) 9999-9999</a>
-    <a class="telefone" href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
-    <a href="https://www.linkedin.com/in/cassianos/" target="_blank">Ver Linkedin</a>
-    <a href="#form">Vamos conversar</a>
-    <span>Um</span>
-    <span>Dois</span>
-  </header>
-  <span>Três</span> -->
-
-  <!-- <article>
-    <section>
-      <div>
-        <span>Sobre eu</span>
-      </div>
-      <h1>Olá,</h1>
-      <h1>me chamo</h1>
-      <h1>Cassiano</h1>
-      <h3>Programador frontend</h3>
-      <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
-      <a href="#form">Me contrate</a>
-    </section>
-    <section>
-      <img src="./imagens/imagens-background/ic-sobre-eu.svg" />
-    </section>
-  </article> -->
-
-
-  <!-- <article>
-    <section>
-      <div>
-        <span>Serviços</span>
-      </div>
-      <img src="./imagens/imagens-background/ic-servicos.svg" />
-    </section>
-    <section>
-      <h2>Meus clientes sabem que eu sempre entregarei um serviço com a qualidade máxima |</h2>
-      <p>Cada projeto para mim é único, dando o meu máximo para entregar tudo aquilo que foi combinado. Com o foco
-        pensado em cada projeto, assim prestando um serviço que será lembrado para sempre!</p>
-      <div>
-        <section>
-          <aside>
-            <div>
-              <img src="./imagens/icones/ic-aplicacoes-mobile.svg" />
-            </div>
-            <h4>Aplicações Mobile</h4>
-            <img src="./imagens/icones/ic-flexa-direita.svg" />
-          </aside>
-          <aside>
-            <div>
-              <img src="./imagens/icones/ic-websites.svg" />
-            </div>
-            <h4>Websites</h4>
-            <img src="./imagens/icones/ic-flexa-direita.svg" />
-          </aside>
-        </section>
-
-        <section>
-          <aside>
-            <div>
-              <img src="./imagens/icones/ic-programacao-prototipos.svg" />
-            </div>
-            <h4>Programação de protótipos</h4>
-            <img src="./imagens/icones/ic-flexa-direita.svg" />
-          </aside>
-          <aside>
-            <div>
-              <img src="./imagens/icones/ic-performance.svg" />
-            </div>
-            <h4>Performance</h4>
-            <img src="./imagens/icones/ic-flexa-direita.svg" />
-          </aside>
-        </section>
-
-      </div>
-    </section>
-  </article> -->
-
-  <!-- <article>
-    <section>
-      <div>
-        <span>Entre em contato comigo</span>
-      </div>
-      <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
-      <form id="form" method="post">
-        <div>
-          <label for="nome">Nome</label>
-          <input type="text" name="nome" id="nome">
-        </div>
-
-        <div>
-          <label for="email">Email</label>
-          <input type="text" name="email" id="email">
-        </div>
-
-        <div>
-          <label for="assunto">Assunto</label>
-          <input type="text" name="assunto" id="assunto">
-        </div>
-
-        <div>
-          <label for="mensagem">Mensagem</label>
-          <textarea name="" id="mensagem" cols="30" rows="10"></textarea>
-        </div>
-        <button type="submit">Salvar</button>
-
-      </form>
-    </section>
-    <section>
-      <img src="./imagens/imagens-background/ic-contato.svg" />
-    </section>
-  </article> -->
-
-  <!-- <footer>
-    <section>
-      <img src="./imagens/imagens-background/ic-footer.svg" />
-    </section>
-    <section>
-      <h2>Mantenha contato</h2>
-      <p>Brasil</p>
-      <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
-      <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
-    </section>
-  </footer> -->
-
-
-
 </body>
 
 </html>
