--- a/index.html
+++ b/index.html
@@ -17,23 +17,21 @@
       <div class="logo">
         <img src="./images/images-background/ic-logo.png" />
       </div>
-      <a id="telefone" class="telefone" href="tel:5599999999">Me ligue (+55) 9999-9999</a>
-      <a class="telefone" href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+      <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
+      <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
       <a href="https://www.linkedin.com/in/cassianos/" target="_blank">Ver Linkedin</a>
       <a href="#form">Vamos conversar</a>
     </header>
 
     <article class="banner">
       <section class="left">
-        <div>
-          <span>Sobre eu</span>
-        </div>
-        <h1>Olá,</h1>
+        <span class="title-section">Sobre eu</span>
+        <h1 class="margin-top-20">Olá,</h1>
         <h1>me chamo</h1>
-        <h1>Cassiano</h1>
-        <h3>Programador frontend</h3>
+        <h1 class="color-primary">Cassiano</h1>
+        <h3 class="margin-top-20">Programador frontend</h3>
         <p>Você está procurando um programador para criar seu sistema ou website? Vamos criar um projeto juntos.</p>
-        <a href="#form">Me contrate</a>
+        <a class="button margin-top-20" href="#form">Me contrate</a>
       </section>
       <section class="right">
         <img src="./images/images-background/ic-sobre-eu.svg" />
@@ -43,9 +41,7 @@
 
     <article>
       <section>
-        <div>
-          <span>Serviços</span>
-        </div>
+        <span class="title-section">Serviços</span>
         <img src="./images/images-background/ic-servicos.svg" />
       </section>
       <section>
@@ -93,9 +89,7 @@
 
     <article>
       <section>
-        <div>
-          <span>Entre em contato comigo</span>
-        </div>
+        <span class="title-section">Entre em contato comigo</span>
         <h2>Vamos conversar e calcular um valor para o seu projeto |</h2>
         <form id="form" method="post">
           <div>
