adicao de servicos

--- a/index.html
+++ b/index.html
@@ -38,55 +38,63 @@
       </section>
     </article>
 
-
-    <article>
-      <section>
+  </div>
+  <article class="services">
+    <div class="container services-inside">
+      <section class="left">
         <span class="title-section">Serviços</span>
         <img src="./images/images-background/ic-servicos.svg" />
       </section>
-      <section>
-        <h2>Meus clientes sabem que eu sempre entregarei um serviço com a qualidade máxima |</h2>
-        <p>Cada projeto para mim é único, dando o meu máximo para entregar tudo aquilo que foi combinado. Com o foco
-          pensado em cada projeto, assim prestando um serviço que será lembrado para sempre!</p>
-        <div>
-          <section>
-            <aside>
-              <div>
+      <section class="right">
+        <h2>
+          Meus clientes sabem que eu sempre entregarei um serviço com a qualidade
+          <span class="color-primary h2">máxima</span>
+          <span class="color-secondary">|</span>
+        </h2>
+        <p class="margin-top-20">
+          Cada projeto para mim é único, dando o meu máximo para entregar tudo aquilo que foi combinado. Com o foco
+          pensado em cada projeto, assim prestando um serviço que será lembrado para sempre!
+        </p>
+        <div class="margin-top-20">
+          <section class="my-services first">
+            <aside class="single-component">
+              <div class="box-image">
                 <img src="./images/icons/ic-aplicacoes-mobile.svg" />
               </div>
               <h4>Aplicações Mobile</h4>
-              <img src="./images/icons/ic-flexa-direita.svg" />
+              <img class="arrow-right" src="./images/icons/ic-flexa-direita.svg" />
             </aside>
-            <aside>
-              <div>
+            <aside class="single-component">
+              <div class="box-image">
                 <img src="./images/icons/ic-websites.svg" />
               </div>
               <h4>Websites</h4>
-              <img src="./images/icons/ic-flexa-direita.svg" />
+              <img class="arrow-right" src="./images/icons/ic-flexa-direita.svg" />
             </aside>
           </section>
 
-          <section>
-            <aside>
-              <div>
+          <section class="my-services second">
+            <aside class="single-component">
+              <div class="box-image">
                 <img src="./images/icons/ic-programacao-prototipos.svg" />
               </div>
               <h4>Programação de protótipos</h4>
-              <img src="./images/icons/ic-flexa-direita.svg" />
+              <img class="arrow-right" src="./images/icons/ic-flexa-direita.svg" />
             </aside>
-            <aside>
-              <div>
+            <aside class="single-component">
+              <div class="box-image">
                 <img src="./images/icons/ic-performance.svg" />
               </div>
               <h4>Performance</h4>
-              <img src="./images/icons/ic-flexa-direita.svg" />
+              <img class="arrow-right" src="./images/icons/ic-flexa-direita.svg" />
             </aside>
           </section>
 
         </div>
       </section>
-    </article>
-
+    </div>
+  </article>
+  <div class="container">
     <article>
       <section>
         <span class="title-section">Entre em contato comigo</span>
