ajustes no footer

--- a/index.html
+++ b/index.html
@@ -137,15 +137,17 @@
     </article>
 
     <footer>
-      <section>
+      <section class="left item-section-left">
         <img src="./images/images-background/ic-footer.svg" />
       </section>
-      <section>
+      <section class="center item-section-center">
         <h2>Mantenha contato</h2>
-        <p>Brasil</p>
-        <a href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
-        <a href="tel:5599999999">Me ligue (+55) 9999-9999</a>
+        <p class="margin-top-20">Brasil</p>
+        <a class="email" href="mailto:cassiano@scheidemantel.com.br">cassiano@scheidemantel.com.br</a>
+        <a class="phone" href="tel:5599999999">(+55) 9999-9999</a>
       </section>
+      <section class="right item-section-right"></section>
+      <img class="item-bottom-wave" src="./images/images-background/ic-onda.svg" />
     </footer>
 
 
